# Qwen2-VL-Streamlit-App-with-RKLLM

./: .gitignore  README.md  README_STREAMLIT.md  debug_test.py  image_encoder.py  main.py  minimal_llm_test.py  minimal_test.py  qwen_model.py  qwen_vl_model.py  requirements.txt  rkllm_bindings.py  rknn_bindings.py  streamlit_app.py  test_libraries.py
app/: CMakeLists.txt  build.sh
app/src/: llm.cpp  main.cpp
